Fix horizontal scroll

--- a/src/routes/resume/layout.scss
+++ b/src/routes/resume/layout.scss
@@ -1,6 +1,9 @@
 .container {
   background: white;
   color: black;
+
   width: 100vw;
+  max-width: 100%;
+
   height: 100vh;
 }
